# testwork_aggregation_bot

./: .dockerignore  .env.exemple  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: bot.py  config.py  constants.py  load_test_data.py  logging_config.py  main.py  mongo_db.py  schemas.py
app/plugins/: handlers.py
