[tool.poetry]
name = "testwork-aggregation-bot"
version = "0.1.0"
description = ""
authors = ["Sergey Morichev <s.morichev@yandex.ru>"]
readme = "README.md"
packages = [{include = "testwork_aggregation_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
motor = "^3.1.2"
pyrogram = "^2.0.103"
pydantic = "^1.10.7"
backoff = "^2.2.1"
python-dotenv = "^1.0.0"
tgcrypto = "^1.2.5"
orjson = "^3.8.10"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
flake8-comprehensions = "^3.11.1"
flake8-bugbear = "^23.3.23"
flake8-bandit = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
extend-select = "B950"
inline-quotes = '"'

[tool.isort]
line_length = 88
profile = "black"

[tool.black]
line-length = 88
target-version = ["py310"]
